feat(metrics): add deployment frequency drill-down details endpoint